# krclient

./: LICENSE  Makefile.am  Makefile.in  README.md  aclocal.m4  configure  configure.ac  kr_alloc.h  kr_client.c  kr_client.h  kr_config.h.in  kr_config.h.in~  kr_json.c  kr_json.h  kr_message.c  kr_message.h  kr_net.c  kr_net.h
bindings/java/: Makefile.am  Makefile.in  krclient.i
bindings/python/: Makefile.am  Makefile.in  krclient.i
